--- a/portfoilogrid/index.html
+++ b/portfoilogrid/index.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.1/css/all.css" integrity="sha384-gfdkjb5BdAXd+lj+gudLWI+BXq4IuLW5IT+brZEZsLFm++aCMlF1V92rMkPaX4PP" crossorigin="anonymous">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/ekko-lightbox/5.3.0/ekko-lightbox.css" />
     <link rel="stylesheet" href="css/style.css">
     <title>Bootstrap Theme</title>
 </head>
@@ -111,6 +112,164 @@
         </div>
 
         <!-- RESUME -->
+        <div id="resume" class="collapse">
+            <div class="card card-body bg-success text-white py-5">
+                <h2>My Resume</h2>
+                <p class="lead">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Possimus, quia!</p>
+            </div>
+            <div class="card card-body">
+                <h3>Where Have I Worked</h3>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Blanditiis dicta iste nemo, repudiandae saepe velit.</p>
+                <div class="card-deck">
+                  <div class="card">
+                      <div class="card-body">
+                          <h4 class="card-title">Devmasters</h4>
+                          <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Maiores, sapiente?</p>
+                          <p class="p-2 mb-3 bg-dark text-white">
+                              Position: Full Stack Developer
+                          </p>
+                          <p class="p-2 mb-3 bg-dark text-white">
+                              Telephone: (444) 444-4444
+                          </p>
+                      </div>
+                      <div class="card-footer">
+                          <h6 class="text-muted">Dates: 2015 - 2018</h6>
+                      </div>
+                  </div>
+                    <div class="card">
+                        <div class="card-body">
+                            <h4 class="card-title">123 Designs</h4>
+                            <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Maiores, sapiente?</p>
+                            <p class="p-2 mb-3 bg-dark text-white">
+                                Position: Web Designer
+                            </p>
+                            <p class="p-2 mb-3 bg-dark text-white">
+                                Telephone: (444) 555-5555
+                            </p>
+                        </div>
+                        <div class="card-footer">
+                            <h6 class="text-muted">Dates: 2013 - 2015</h6>
+                        </div>
+                    </div>
+                    <div class="card">
+                        <div class="card-body">
+                            <h4 class="card-title">Web Designer Pro</h4>
+                            <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Maiores, sapiente?</p>
+                            <p class="p-2 mb-3 bg-dark text-white">
+                                Position: Web Designer
+                            </p>
+                            <p class="p-2 mb-3 bg-dark text-white">
+                                Telephone: (444) 333-33333
+                            </p>
+                        </div>
+                        <div class="card-footer">
+                            <h6 class="text-muted">Dates: 2010 - 2013</h6>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <!-- WORK -->
+        <div id="work" class="collapse">
+            <div class="card card-body bg-warning text-white py-5">
+                <h2>My Work</h2>
+                <p class="lead">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Possimus, quia!</p>
+            </div>
+            <div class="card card-body py-5">
+                <h3>What Have I Built</h3>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Animi maxime placeat quod reprehenderit sit tenetur?</p>
+                <div class="row no-gutters">
+                    <div class="col-md-3">
+                        <a href="https://unsplash.it/1200/768.jpg?image=252" data-toggle="lightbox">
+                            <img src="https://unsplash.it/600.jpg?image=252" alt="" class="img-fluid">
+                        </a>
+                    </div>
+                    <div class="col-md-3">
+                        <a href="https://unsplash.it/1200/768.jpg?image=253" data-toggle="lightbox">
+                            <img src="https://unsplash.it/600.jpg?image=253" alt="" class="img-fluid">
+                        </a>
+                    </div>
+                    <div class="col-md-3">
+                        <a href="https://unsplash.it/1200/768.jpg?image=254" data-toggle="lightbox">
+                            <img src="https://unsplash.it/600.jpg?image=254" alt="" class="img-fluid">
+                        </a>
+                    </div>
+                    <div class="col-md-3">
+                        <a href="https://unsplash.it/1200/768.jpg?image=255" data-toggle="lightbox">
+                            <img src="https://unsplash.it/600.jpg?image=255" alt="" class="img-fluid">
+                        </a>
+                    </div>
+                </div>
+                <div class="row no-gutters">
+                    <div class="col-md-3">
+                        <a href="https://unsplash.it/1200/768.jpg?image=256" data-toggle="lightbox">
+                            <img src="https://unsplash.it/600.jpg?image=256" alt="" class="img-fluid">
+                        </a>
+                    </div>
+                    <div class="col-md-3">
+                        <a href="https://unsplash.it/1200/768.jpg?image=257" data-toggle="lightbox">
+                            <img src="https://unsplash.it/600.jpg?image=257" alt="" class="img-fluid">
+                        </a>
+                    </div>
+                    <div class="col-md-3">
+                        <a href="https://unsplash.it/1200/768.jpg?image=258" data-toggle="lightbox">
+                            <img src="https://unsplash.it/600.jpg?image=258" alt="" class="img-fluid">
+                        </a>
+                    </div>
+                    <div class="col-md-3">
+                        <a href="https://unsplash.it/1200/768.jpg?image=259" data-toggle="lightbox">
+                            <img src="https://unsplash.it/600.jpg?image=259" alt="" class="img-fluid">
+                        </a>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <!-- CONTACT -->
+        <div id="contact" class="collapse">
+            <div class="card card-body bg-danger text-white py-5">
+                <h2>Contact Me</h2>
+                <p class="lead">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Possimus, quia!</p>
+            </div>
+            <div class="card card-body py-5">
+                <h3>Get In Touch</h3>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquam assumenda ea harum placeat recusandae sit?</p>
+                <form>
+                    <div class="form-group">
+                        <div class="input-group input-group-lg">
+                            <div class="input-group-prepend">
+                            <span class="input-group-text bg-danger text-white">
+                                <i class="fas fa-user"></i>
+                            </span>
+                            </div>
+                            <input type="text" class="form-control bg-dark text-white" placeholder="Name">
+                        </div>
+                    </div>
+                    <div class="form-group">
+                        <div class="input-group input-group-lg">
+                            <div class="input-group-prepend">
+                            <span class="input-group-text bg-danger text-white">
+                                <i class="fas fa-envelope"></i>
+                            </span>
+                            </div>
+                            <input type="text" class="form-control bg-dark text-white" placeholder="Email">
+                        </div>
+                    </div>
+                    <div class="form-group">
+                        <div class="input-group input-group-lg">
+                            <div class="input-group-prepend">
+                            <span class="input-group-text bg-danger text-white">
+                                <i class="fas fa-pencil-alt"></i>
+                            </span>
+                            </div>
+                            <textarea type="text" class="form-control bg-dark text-white" placeholder="Message"></textarea>
+                        </div>
+                    </div>
+                    <input type="submit" value="Submit" class="btn btn-danger btn-block btn-lg">
+                </form>
+            </div>
+        </div>
 
         <!-- FOOTER -->
         <footer class="p-5 bg-dark text-white" id="main-footer">
@@ -129,9 +288,19 @@
 <script src="http://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
-<script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/ekko-lightbox/5.3.0/ekko-lightbox.min.js"></script>
+    <script>
     // Get the current year for the copyright
     $('#year').text(new Date().getFullYear());
+
+    $('.port-item').click(function(){
+        $('.collapse').collapse('hide');
+    });
+
+    $(document).on('click', '[data-toggle="lightbox"]', function (e) {
+        e.preventDefault();
+        $(this).ekkoLightbox();
+    });
 </script>
 </body>
 </html>
